# trentino-kg-ingestion

./: .gitignore  1_extraction.py  2_mapping.py  3_unification.py  OSM-GTFS-zzz.owl  README.md  generate_clean_kg.py  mapping.yaml  old_script.py  pyproject.toml  requirements.txt  run_pipeline.py  teleology.ttl  teleontology.ttl  test_turista.py  tourist_profile.ttl
examples/: scenarios1.py  scenarios2.py  scenarios3.py  scenarios4.py
src/osm2kg/: __init__.py  convert.py  distance.py  elevation.py  feature.py  graph.py  gtfs.py  isochrone.py  kg.py  projection.py  routing.py  settings.py  sparql_queries.py  truncate.py  utils.py
